@@ -1,5 +1,12 @@
 2008-04-07  Vincent Untz  <vuntz@gnome.org>
 
+	* set-timezone.c: (set_time_notify): ignore no-reply dbus errors when
+	setting the time because dbus doesn't use a monotonic clock.
+	Patch by Matthias Clasen <mclasen@redhat.com>
+	Fix bug #526266.
+
+2008-04-07  Vincent Untz  <vuntz@gnome.org>
+
 	* calendar-window.c: (is_appointment): show caldav appointments too.
 	Fix by Debian (Roland Mas). Fix bug #501569
 
